--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* ct = custom */
+.ct-top-menu-item {
+  @apply relative cursor-pointer py-1 after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-light-coffee after:transition-all after:duration-300 after:ease-in-out hover:text-gray-800 hover:after:w-full;
+}
