--- a/src/input.css
+++ b/src/input.css
@@ -6,3 +6,9 @@
 .ct-top-menu-item {
   @apply relative cursor-pointer py-1 after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-light-coffee after:transition-all after:duration-300 after:ease-in-out hover:text-gray-800 hover:after:w-full;
 }
+.ct-icon {
+  @apply inline-block h-5 w-5;
+}
+.ct-badge-circle {
+  @apply rounded-full px-1.5 text-center text-xs;
+}
