--- a/src/input.css
+++ b/src/input.css
@@ -1,14 +1,21 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 /* ct = custom */
 .ct-top-menu-item {
-  @apply relative cursor-pointer py-1 after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-light-coffee after:transition-all after:duration-300 after:ease-in-out hover:text-gray-800 hover:after:w-full;
+  @apply relative cursor-pointer py-1 hover:text-gray-800 after:lg:absolute after:lg:bottom-0 after:lg:left-0 after:lg:h-0.5 after:lg:w-0 after:lg:bg-light-coffee after:lg:transition-all after:lg:duration-300 after:lg:ease-in-out hover:after:lg:w-full;
+}
+.ct-top-menu-item-active {
+  @apply text-gray-800;
 }
 .ct-icon {
   @apply inline-block h-5 w-5;
 }
 .ct-badge-circle {
   @apply rounded-full px-1.5 text-center text-xs;
+}
+.ct-top-menu-expanded {
+  @apply absolute top-10 z-50 w-full animate-slideDown bg-white text-center;
 }
